--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
  <div class="pos_cen">
 
- <img src="image.JPG" alt="food1" height="500" width="500" class="img-deg" >
+ <img src="image.jpg" alt="food1" height="500" width="500" class="img-deg" >
 
 <div class="intro">
 	<h2>About Us</h2>
