--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</ul>
 		
 		<div class="top-btn">
-			<a href="Membership.html" class="nav-btn">Join Us</a>
+			<a href="membership.html" class="nav-btn">Join Us</a>
 		</div>
 	</header>
 
