--- a/location.html
+++ b/location.html
@@ -55,7 +55,7 @@
 	</ul>
 		
 	<div class="top-btn">
-			<a href="Membership.html" class="nav-btn">Join Us</a>
+			<a href="membership.html" class="nav-btn">Join Us</a>
 	</div>
 </header>
 
